// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  aria-hidden={null}
  className="slide orion-fusion-theme"
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;

exports[`should render a default Slide 1`] = `
<div
  aria-hidden={null}
  className="slide"
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;

exports[`should render a hidden Slide 1`] = `
<div
  aria-hidden={true}
  className="slide"
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;
